<resources>
    <string name="app_name">Calculus</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_publicity">PublicityActivity</string>
    <string name="category">categoria</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_right_reserved">All rights reserved.</string>
    <string name="calculus_inc">\u00A9 2017 Calculus App Inc</string>
    <string name="versao">Versão 1.0.0</string>

    <string name="txt_este_anuncio">Este anúncio ajuda a manter a edição gratuita</string>
    <string name="bt_nao_obg">Não, obrigado</string>
    <string name="ad_unit_id">ca-app-pub-3575287456847740/2465250519</string>

    <!-- TextView String -->
    <string name="tv_salario">Salário Bruto </string>
    <string name="tv_num_dependentes">Número de Dependentes</string>
    <string name="tv_descontos">Descontos</string>
    <string name="tv_valor_medio_hora_extra">Valor Médio de Horas Extras no Ano</string>
    <string name="tv_dias_de_ferias">Dias de Férias</string>
    <string name="tv_terco_ferias">1/3 Férias</string>
    <string name="tv_abono_pecuniario">Abono Pecuniário \n(Vender 1/3)</string>
    <string name="tv_adiantar_parcela">Adiantar 1ª parcela 13º</string>
    <string name="tv_num_hora_extra">Número de horas extras</string>
    <string name="tv_adicional_hora_extra">Adicional Hora Extra (%)</string>
    <string name="tv_jornada_mensal">Jornada Mensal (horas)</string>
    <string name="tv_num_meses_trabalhados">Número Meses Trabalhados</string>
    <string name="tv_percentual">Percentual de aumento (%)</string>
    <string name="tv_salario_anterior">Salário Base Reajuste</string>
    <string name="tv_abono_pecuniario_result">Abono Pecuniário</string>
    <string name="tv_terco_abono_pec">1/3 Abono Pecuniário</string>
    <string name="tv_adiantamento_decimo">Adiantamento 1ª Parcela 13º</string>


    <string name="icon_adiciona">Adiciona</string>
    <string name="nao">Não</string>
    <string name="sim">Sim</string>
    <string name="tv_parcela">Parcela</string>
    <string name="rb_parcela_unica">Única</string>
    <string name="rb_parcela_primeira">Primeira</string>
    <string name="rb_parcela_segunda">Segunda</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <!-- Valores para chave valor -->
    <string name="preference_file_key">app_salario_key</string>
    <string name="key_descontos">key_descontos</string>
    <string name="key_salario_bruto">key_salario_bruto</string>
    <string name="key_num_dependentes">key_num_dependentes</string>
    <string name="key_valor_medio_hora_extra">key_valor_medio_hora_extra</string>
    <string name="key_dias_de_ferias">key_dias_de_ferias</string>
    <string name="key_abono_pecuniario">key_abono_pecuniario</string>
    <string name="key_adiantar_decima">key_adiantar_decima</string>
    <string name="key_jornada_mensal">key_jornada_mensal</string>
    <string name="key_adicional_hora_extra">key_adicional_hora_extra</string>
    <string name="key_num_hora_extra">key_num_hora_extra</string>
    <string name="key_num_meses_trabalhados">key_num_meses_trabalhados</string>
    <string name="key_parcela">key_parcela</string>
    <string name="key_salario_base_reaj">key_salario_base_reaj</string>
    <string name="key_percentual_aumento">key_percentual_aumento</string>
    <string name="key_num_meses_trabalhados_reaj">key_num_meses_trabalhados_reaj</string>

    <string name="privacy_policy_html" formatted="false">
        <![CDATA[
            <h2>Política de Privacidade</h2>
              <p> Victor Minerva construiu o aplicativo Calculus como um aplicativo Freemium. Este SERVIÇO é fornecido por Victor Minerva sem nenhum custo e destina-se a ser usado como está. </p>
              <p> Esta página é usada para informar os visitantes do site sobre minhas políticas com a coleta, uso e divulgação de Informações Pessoais se alguém decidir usar meu Serviço. </p>
              <p> Se você optar por usar o meu Serviço, então você concorda com a coleta e uso de informações em relação a esta política. As Informações Pessoais que recolho são usadas para fornecer e melhorar o Serviço. Não usarei nem compartilharei suas informações com ninguém, exceto conforme descrito nesta Política de Privacidade. </p>
              <p> Os termos utilizados nesta Política de Privacidade têm os mesmos significados que nos nossos Termos e Condições, os quais são acessíveis no Cálculo, salvo quando definido de outra forma nesta Política de Privacidade. </p>

              <p><strong>Coleta e Uso de Informações</strong></p>
              <p> Para uma melhor experiência, ao usar nosso Serviço, eu posso exigir que você nos forneça algumas informações pessoalmente identificáveis. As informações que solicito são mantidas no seu dispositivo e não são coletadas por mim de forma alguma. </p>
              <p> O aplicativo usa serviços de terceiros que podem coletar informações usadas para identificá-lo. </p>
              <p><strong>Log Data</strong></p>
              <p> Desejo informá-lo de que, sempre que você usar meu Serviço, em caso de erro no aplicativo, colecionarei dados e informações (através de produtos de terceiros) no seu telefone, chamados Log Data. Esses dados de log podem incluir informações como o endereço IP do dispositivo, o nome do dispositivo, a versão do sistema operacional, a configuração do aplicativo ao utilizar o meu Serviço, a hora e a data de uso do Serviço e outras estatísticas. </p>
              <p><strong>Cookies</strong></p>
              <p> Os cookies são arquivos com pequena quantidade de dados que é comumente usado um identificador exclusivo anônimo. Estes são enviados para o seu navegador a partir do site que você visita e são armazenados na memória interna do dispositivo. </p>
              <p> Este Serviço não utiliza estes "cookies" explicitamente. No entanto, o aplicativo pode usar código de terceiros e bibliotecas que usam "cookies" para coletar informações e melhorar seus serviços. Você tem a opção de aceitar ou recusar esses cookies e saber quando um cookie está sendo enviado para o seu dispositivo. Se você optar por recusar nossos cookies, talvez não seja possível usar algumas partes deste Serviço. </p>
              <p><strong>Provedores de serviço</strong></p>
              <p> Posso empregar empresas terceirizadas e indivíduos devido às seguintes razões:</p>
              <ul>
                 <li>Facilitar o nosso Serviço;</li>
                 <li>Fornecer o Serviço em nosso nome;</li>
                 <li>Realizar serviços relacionados ao Serviço; ou</li>
                 <li>Para nos ajudar a analisar como nosso Serviço é usado.</li>
              </ul>
              <p> Quero informar aos usuários deste Serviço que esses terceiros têm acesso às suas Informações Pessoais. A razão é executar as tarefas atribuídas a eles em nosso nome. No entanto, eles são obrigados a não divulgar ou usar as informações para qualquer outra finalidade. </p>
              <p><strong>Segurança</strong></p>
              <p> Eu valorizo ​​a sua confiança em nos fornecer suas informações pessoais, por isso estamos nos esforçando para usar meios comercialmente aceitáveis ​​de protegê-lo. Mas lembre-se que nenhum método de transmissão através da Internet, ou método de armazenamento eletrônico é 100% seguro e confiável, e eu não posso garantir a sua segurança absoluta. </p>
              <p><strong>Links para outros sites</strong></p>
              <p> Este Serviço pode conter links para outros sites. Se você clicar em um link de terceiros, você será direcionado para esse site. Observe que esses sites externos não são operados por mim. Portanto, eu recomendo fortemente que você revise a Política de Privacidade desses sites. Eu não tenho controle sobre e assumir nenhuma responsabilidade pelo conteúdo, políticas de privacidade ou práticas de quaisquer sites ou serviços de terceiros. </p>
              <p><strong>Privacidade das crianças</strong></p>
              <p> Estes Serviços não abordam qualquer pessoa com menos de 13 anos de idade. Não coleciono intencionalmente informações pessoais de crianças menores de 13 anos. No caso de eu descobrir que uma criança com menos de 13 anos me forneceu informações pessoais, eu imediatamente exclui isso de nossos servidores. Se você é um pai ou um tutor e você está ciente de que seu filho nos forneceu informações pessoais, entre em contato comigo para que eu possa fazer as ações necessárias. </p>
              <p><strong>Alterações nesta Política de Privacidade</strong></p>
              <p> Posso atualizar nossa Política de Privacidade de tempos em tempos. Assim, é aconselhável rever esta página periodicamente para quaisquer alterações. Eu notificá-lo-ei de todas as mudanças afixando a política de privacidade nova nesta página. Essas alterações são efetivas imediatamente após serem publicadas nesta página. </p>
              <p><strong>Contate-nos</strong></p>
              <p> Se você tiver dúvidas ou sugestões sobre minha Política de Privacidade, não hesite em me contactar. </p>
              <p> Esta página Política de Privacidade foi criada em <a href="https://privacypolicytemplate.net" target="_blank">privacypolicytemplate.net</a> e modificado / gerado pelo <a href="https://app-privacy-policy-generator.firebaseapp.com/" target="_blank">App Privacy Policy Generator</a></p>
        ]]>
    </string>
    <string name="termos_de_uso" formatted="false">
        <![CDATA[
        <h2>Termos de uso</h2>
            <p> O Calculus é uma plataforma de informações e serviços que visa fornecer ferramentas de consultas a respeitos de cálculos diversos. </p>
            <p> O Calculus não se responsabiliza por eventuais erros contidos nos cálculos seja devido a alguma alteração na legislação para o cálculo específico ou por erro matemático do mesmo. </p>
            <p> Os resultados fornecidos pelo Calculus não possuem cunho legal. Caso necessite de resultados com este fim, sugerimos consulta a um profissional especializado. </p>
            <p> O Calculus se reserva a modificar, a qualquer momento, o conteúdo e os termos deste TERMO DE USO ficando seus usuários automaticamente cientes e concordantes com os novos termos. </p>
            <p> O Calculus está sempre disposto a escutar, discutir e, eventualmente, modificar este TERMO DE USO de modo a atender aos interesses comuns do Calculus e seus USUÁRIOS. </p>
        ]]>
    </string>
    <string name="info_app">**Os cálculos contidos no app são baseados em dados referenciados, porém ainda sim podem estar incorretos e por isso devem ser utilizados apenas como referência. Caso necessite de um resultado exato e com cunho legal, sugerimos que procure um profissional especializado. Leia os termos de uso.</string>
</resources>
