<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey700"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="38sp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="26dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/versao"
        android:textColor="@android:color/white"
        android:textSize="18dp" />

    <ImageView
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18sp"
        android:src="@mipmap/ic_calculus" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/calculus_inc"
        android:textColor="@android:color/white"
        android:textSize="18dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/all_right_reserved"
        android:textColor="@android:color/white"
        android:textSize="18dp" />

</LinearLayout>