<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey800"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.minervavi.app.workcalcapp.activity.PublicityActivity"
    tools:showIn="@layout/activity_publicity">

    <TextView
        android:id="@+id/tv_anuncio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:fontFamily="casual"
        android:text="@string/txt_este_anuncio"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_nao_obg"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/bt_nao_obg"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.gms.ads.NativeExpressAdView
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="320x250"
        ads:adUnitId="@string/ad_unit_id"
        app:layout_constraintBottom_toTopOf="@+id/bt_nao_obg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_anuncio" />

</android.support.constraint.ConstraintLayout>
