<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey800"
    android:orientation="vertical"
    tools:context="com.minervavi.app.workcalcapp.fragment.DadosDecimoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_double"
        android:paddingRight="@dimen/spacing_double"
        android:paddingTop="@dimen/spacing_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/tv_num_meses_trabalhados"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_num_meses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:inputType="number"
            android:maxLength="2"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_double"
        android:paddingRight="@dimen/spacing_double"
        android:paddingTop="@dimen/spacing_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:gravity="end"
            android:text="@string/tv_parcela"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_parcela"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_parcela_unica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/rb_parcela_unica"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:theme="@style/radioButtonTheme" />

            <RadioButton
                android:id="@+id/radio_parcela_primeira"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/rb_parcela_primeira"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:theme="@style/radioButtonTheme" />

            <RadioButton
                android:id="@+id/radio_parcela_segunda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/rb_parcela_segunda"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:theme="@style/radioButtonTheme" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>
