<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey800"
    android:orientation="vertical"
    tools:context="com.minervavi.app.workcalcapp.fragment.DadosFeriasFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_double"
        android:paddingRight="@dimen/spacing_double"
        android:paddingTop="@dimen/spacing_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/tv_valor_medio_hora_extra"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_valor_medio_he"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:inputType="number"
            android:maxLength="15"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_double"
        android:paddingRight="@dimen/spacing_double"
        android:paddingTop="@dimen/spacing_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/tv_dias_de_ferias"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_dias_ferias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:inputType="number"
            android:maxLength="2"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_double"
        android:paddingRight="@dimen/spacing_double"
        android:paddingTop="@dimen/spacing_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/tv_abono_pecuniario"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_abonar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_normal">

            <RadioButton
                android:id="@+id/radio_abonar_sim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sim"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:theme="@style/radioButtonTheme" />

            <RadioButton
                android:id="@+id/radio_abonar_nao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nao"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:theme="@style/radioButtonTheme" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_double"
        android:paddingRight="@dimen/spacing_double"
        android:paddingTop="@dimen/spacing_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/tv_adiantar_parcela"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_adiantar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_normal">

            <RadioButton
                android:id="@+id/radio_adiantar_sim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sim"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:theme="@style/radioButtonTheme" />

            <RadioButton
                android:id="@+id/radio_adiantar_nao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nao"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:theme="@style/radioButtonTheme" />
        </RadioGroup>

    </LinearLayout>
</LinearLayout>