<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey800"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".fragment.DadosSalarioLiqFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_double"
        android:paddingRight="@dimen/spacing_double"
        android:paddingTop="@dimen/spacing_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/tv_salario"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.blackcat.currencyedittext.CurrencyEditText
            android:id="@+id/et_salario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:inputType="number"
            android:maxLength="15"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:allow_negative_values="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_double"
        android:paddingRight="@dimen/spacing_double"
        android:paddingTop="@dimen/spacing_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/tv_num_dependentes"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_num_dep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:inputType="number"
            android:maxLength="2"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_descontos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_double"
        android:paddingRight="@dimen/spacing_double"
        android:paddingTop="@dimen/spacing_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/tv_descontos"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/icon_adiciona"
                android:padding="@dimen/spacing_normal"
                android:textSize="18sp"
                app:srcCompat="@drawable/ic_add" />

            <com.blackcat.currencyedittext.CurrencyEditText
                android:id="@+id/et_descontos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/btn_add"
                android:gravity="end"
                android:inputType="number"
                android:maxLength="15"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/fab" />
    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>

